# INIPP

./: CMakeLists.txt  INSTALL.txt  LICENSE  README.md
include/: inipp.hpp
src/core/: ippcore.cpp  ippcore.hpp  ipputility.hpp
src/file/: chainlock.cpp  chainlock.h  file.cpp  file.h  ippreader.cpp  ippreader.h
src/streams/: ipptuple.hpp  streams.hpp
src/types/: ippcache.cpp  ippcache.h  ippsection.cpp  ippsection.h  ipptypes.cpp  ipptypes.hpp
test/: test.cpp
